Fixed images center alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -311,4 +311,7 @@ th {
 	  color:#428bca;
   }
 
+  .aligncenter {
+	  text-align: center;
+  }
  
